# MyQt_Projects

./: .gitignore  README.md
QT_MyXVideo/: CMakeLists.txt  filter.cpp  filter.h  image.qrc  imagepro.cpp  imagepro.h  main.cpp  videothread.cpp  videothread.h  videowidget.cpp  videowidget.h  xvideo.cpp  xvideo.h  xvideo.ui
Qt_Mylabel/: CMakeLists.txt  main.cpp  mainwindow.cpp  mylabel.cpp  mylabel.h
Qt_SerialTool/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
